<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhoneBOT Communications</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

     <!-- Menu items -->
  	<string name="Text">Status: -</string>
    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="List">List paired Devices</string>
    <string name="Find">Search new Devices / Cancel</string>
    <string name="paired">Paired Devices:</string>
    <string name="discover">Discover</string>
</resources>

